Address layout issues of Connect page (select drop down arrow location and top contact info) on Mobile

--- a/wp-content/themes/hmr-theme/assets/css/less/app.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/app.less
@@ -368,12 +368,6 @@
 							width:100%;
 						}
 					}
-					span {
-						label {
-							font-size:12px;
-							margin-top:-15px;
-						}
-					}
 				}
 			}
 			.gform_body, .gform_footer {
@@ -395,6 +389,13 @@
 		}
 	}
 
+	div.selector {
+		span {
+			max-width:95%;
+			background-position:right center;
+		}
+	}
+
 	#map_nest {
 		display:none;
 	}
@@ -407,6 +408,8 @@
 				margin:0;
 				background:none;
 				text-align:center;
+				width:auto;
+				min-width:auto;
 				.social-icons {
 					float:none;
 					margin:0;
